--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <h3>Add New Transaction</h3>
             <form id="form">
                 <div class="form-control">
+                    <label for="amount">Text</label>
+                    <input type="text" id="text" placeholder="Enter text..." />
+                </div>
+                <div class="form-control">
                     <label for="amount"
                         >Amount <br />
-                        (negetive - expense, positive - income)</label
+                        (negetive: expense, positive: income)</label
                     >
                     <input
                         type="number"
                         id="amount"
                         placeholder="Enter amount..."
                     />
-                </div>
-                <div class="form-control">
-                    <label for="amount">Text</label>
-                    <input type="text" id="text" placeholder="Enter text..." />
                 </div>
                 <button class="btn">Add Transaction</button>
             </form>
