changed sign convention html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="form-control">
                     <label for="amount"
                         >Amount <br />
-                        (negetive: expense, positive: income)</label
+                        (negetive: income, positive: expense)</label
                     >
                     <input
                         type="number"
